# pych9329

./: LICENSE  README.md  pyproject.toml
example/: quick_start.py  update_baud_rate.py
src/pych9329/: chip_command.py  exceptions.py  frame_utils.py  hid_code_map.py  hid_code_table.py  keyboard.py  mouse.py  struct_utils.py
test/: test_command.py
